# zaffre

./: .gitignore  Cargo.toml  README.md  bibliography.md  build.rs  dist_to_quad_curve.tex  notes.md  testing_text.txt
examples/: basic_shader.frag  basic_shader.vert  basic_test.rs  list_fonts.rs  list_fonts_metrics.rs  text_analyzer_run_glyphs.rs  text_analyzer_runs.rs
src/: bezier.rs  color.rs  coordinates.rs  cubic_bezier.rs  ffi_string.rs  font.rs  formatted_string.rs  formatted_text.rs  generic_backend.rs  glyph_image_slab.rs  glyph_painter.rs  image_group.rs  lib.rs  painter.rs  path.rs  quad_bezier.rs  retained.rs  text_analyzer.rs  text_layout.rs  tiny_skia_painter.rs  utf16_utf8_index_converter.rs  utf_index_converter.rs  vk_allocator.rs  vk_descriptor_set_allocator.rs  vk_util.rs
src/linux_backend/: font_backend.rs  glyph_painter_backend.rs
src/macos_backend/: font_backend.rs  glyph_painter_backend.rs  mod.rs  text_analyzer_backend.rs
src/macos_backend.rs/: font_backend.rs
src/path/: glium_backend.rs  mod.rs
src/shaders/: stroke_quad_bezier.frag  stroke_quad_bezier.vert  stroke_solid.frag  stroke_solid.vert
src/windows_backend/: font_backend.rs  glyph_painter.rs  mod.rs  text_analyzer_backend.rs  wide_ffi_string.rs
