
[package]
name = "zaffre"
version = "0.0.1"
authors = ["Jordan Miner <jminer7@gmail.com>"]
description = "Zaffre is a 2D graphics library."
keywords = ["2d", "graphics"]
license = "MPL-2.0"

[dependencies]
ahash = "0.2"
ash = "0.28"
#float-cmp = "0.5"
nalgebra = "0.8.2"
num = "0.1.32"
once_cell = "1.2"
tiny-skia = "0.6"
smallvec = "0.1.8"

#[dependencies.image]
#version = "*"
#default-features = false
#features = []

[target.'cfg(windows)'.dependencies.windows]
version = "0.30"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
]
