
[package]
name = "zaffre"
version = "0.0.1"
authors = ["Jordan Miner <jminer7@gmail.com>"]
description = "Zaffre is a 2D graphics library."
keywords = ["2d", "graphics"]
license = "MPL-2.0"

[dependencies]
ahash = "0.2"
ash = "0.28"
#float-cmp = "0.5"
glam = "0.21.2"
nalgebra = "0.8.2"
num = "0.1.32"
once_cell = "1.2"
tiny-skia = "0.6"
smallvec = "1.8.0"

#[dependencies.image]
#version = "*"
#default-features = false
#features = []

[target.'cfg(windows)'.dependencies.windows]
version = "0.37"
features = [
    "implement",
    "Win32_Graphics_DirectWrite",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_System_SystemServices",
]

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "19.2"
core-foundation = "0.9.3"
